pkl-core/src/test/files/LanguageSnippetTests/input/errors/noDefault3.pkl
local typealias B = Listing<String> | String

b: B
